# GodunovsMethod

./: .gitignore  CMakeLists.txt  LICENSE  README.md  externalGoogleTest.cmake
Tests/: CMakeLists.txt  Test.cpp  main.cpp
src/: CMakeLists.txt  Euler1d.cpp  Euler1d.hpp  EulerRiemannProblem.cpp  EulerRiemannProblem.hpp  Mesh.cpp  Mesh.hpp  RiemannSolvers.cpp  RiemannSolvers.hpp
